--- a/forum/templates/includes/footer.html
+++ b/forum/templates/includes/footer.html
@@ -4,7 +4,7 @@
 <my_nav>
   {% with request.resolver_match.view_name as view_name %}
     <div class="row fixed-bottom p-3 border-top border-white" >
-      <div class="col-10">
+      <div class="col-12">
         {% for name, url in tree.items %}
           <a href="{{ url }}" 
           {% if forloop.last %}style='color:white;'{% endif %}
@@ -15,14 +15,14 @@
           {% if not forloop.last %}>{% endif %}
         {% endfor %}
       </div>
-      <div class="col-2">
+      {% comment %} <div class="col-2">
         <div class='d-flex justify-content-end'>
           <a href="{% url 'main:about_author' %}"
           {% if view_name  == 'main:about_author' %}style="color:white;"{% endif %}>
             Автор проекта
           </a>
         </div>
-      </div>
+      </div> {% endcomment %}
     </div>
   {% endwith %}
 </my_nav>
