--- a/forum/templates/about_author.html
+++ b/forum/templates/about_author.html
@@ -10,28 +10,32 @@
 				Информация об авторе проекта и технологиях
 			</div>
 			<div class="card-body">
-				Фуллстeк разработка и дизайн сайта - Аюпов Ильдар<br>
-				<a href="mailto:ildarbon@gmail.com">ildarbon@gmail.com</a><br>
+				ABC-forum - свободный форум для общения по самым разным темам<br>
+				Фуллстек-разработка и дизайн: Ильдар Аюпов, 2023 г.<br>
+				e-mail: ildarbon@gmail.com<br>
+				Telegramm: @ildarbonn<br>
+				Репозиторий на GitHub: <a>https://github.com/ildar-aiupov/abc-forum</a><br> 
 				<br>
-				Использованные технологии и библиотеки:<br>
-				- Python<br>
-				- Django<br>
-				- Bootstrap<br>
-				- HTML<br>
-				- CSS<br>
-				- Javascript<br>
-				- Сторонние модули: sorl-thumbnail, pillow<br>
+				Основные библиотеки и технологии:<br>
+				- Бэкенд: Python, Django, PostgreSQL<br>
+				- Фронтенд: Bootstrap, HTML, CSS, Javascript<br>
+				- Деплой: Docker, NGINX, Gunicorn, Continuous Deployment (GitHub Actions)<br>
 				<br>
-				Реализованы такие вещи как:<br>
+				Реализованы такие вещи, как:<br>
 				- переопределена стандартная модель user, добавлены новые поля<br>
 				- переопределены Class Based Views из django.contrib.auth.views<br>
+				- регистрация пользователей, изменение пароля, сброс пароля по электронной почте<br>
+				- автоматическая подстройка меток даты и времени тем и сообщений под часовой пояс текущего пользователя<br>
 				- отслеживание активности пользователей через middleware<br>
-				- восстановление пароля по электронной почте<br>
-				- пользовательские теги, фильтры (для контроля форм, подсчета количества сообщений, определения последнего сообщения и перевода даты и времени под часовой пояс пользователя)<br>
-				- пагинация<br>
-				- загрузка изображений для аватаров пользователей, в сообщения пользователей, отображение их в виде миниатюр или в полноразмерном виде<br>
-				- ввод смайликов в сообщениях<br>
+				- пользовательские теги, фильтры (для контроля форм, подсчета количества сообщений пользователя, определения последнего сообщения и перевода даты и времени под часовой пояс пользователя)<br>
+				- пагинация списков тем и сообщений<br>
+				- дерево навигации по сайту<br>
+				- возможность сортировки тем по разным критериям<br>
+				- подгрузка изображений в профили и сообщения пользователей, отображение их в виде миниатюр или в полноразмерном виде<br>
 				- возможность цитирования сообщений других авторов<br>
+				- ввод смайликов в сообщениях<br>
+				<br>
+				Информация о размещении и запуске проекта на локальной машине приведена в файле readme.md в репозитории на GitHub<br>
 			</div>
 		</div>
 	</div>
