--- a/forum/templates/about_author.html
+++ b/forum/templates/about_author.html
@@ -14,7 +14,7 @@
 				Фуллстек-разработка и дизайн: Ильдар Аюпов, 2023 г.<br>
 				e-mail: ildarbon@gmail.com<br>
 				Telegramm: @ildarbonn<br>
-				Репозиторий на GitHub: <a>https://github.com/ildar-aiupov/abc-forum</a><br> 
+				Репозиторий на GitHub: <a href="https://github.com/ildar-aiupov/abc-forum">https://github.com/ildar-aiupov/abc-forum</a><br> 
 				<br>
 				Основные библиотеки и технологии:<br>
 				- Бэкенд: Python, Django, PostgreSQL<br>
