--- a/forum/templates/includes/header.html
+++ b/forum/templates/includes/header.html
@@ -53,7 +53,7 @@
   <img src="{% static 'img/header_picture_brown.jpg' %}"  width="100%" height="250px">
   <div style="position:absolute; top:65px; left:24px; color:black;" id="site_title">
     <a href="{% url 'main:index' %}">
-      <h1>ABC-forum</h1>
+      <h1>ABC-форум</h1>
     </a>
   </div>
 </div>
