--- a/forum/templates/about_author.html
+++ b/forum/templates/about_author.html
@@ -34,6 +34,7 @@
 				- подгрузка изображений в профили и сообщения пользователей, отображение их в виде миниатюр или в полноразмерном виде<br>
 				- возможность цитирования сообщений других авторов<br>
 				- ввод смайликов в сообщениях<br>
+				- кастомная обработка основных ошибок (404, 500)<br>
 				<br>
 				Информация о размещении и запуске проекта на локальной машине приведена в файле readme.md в репозитории на GitHub<br>
 			</div>
